# books

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
src/books/: __main__.py  cli.py  config.py  config_default.yaml  db.py  importer.py  interactive.py  paths.py  query.py
src/books/commands/: bibtex_cmd.py  import_cmd.py  ls_cmd.py  reindex_cmd.py  rm_cmd.py  search_cmd.py  show_cmd.py  tag_cmd.py
src/books/index/: chroma.py  chunker.py  embedder.py  extract.py  fts.py  indexer.py
src/books/metadata/: arxiv.py  crossref.py  models.py  openlibrary.py  pdf_meta.py
tests/: test_chunker.py  test_db.py  test_fts.py  test_metadata_clients.py  test_paths.py  test_pdf_meta.py  test_query.py
