[project]
name = "books"
version = "0.1.0"
description = "CLI bibliography manager: import PDFs, look up metadata via Crossref/arXiv, and search across them with a vector index."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "confuse>=2.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pymupdf>=1.27.2.3",
    "rich>=15.0.0",
    "semantic-text-splitter>=0.30.1",
    "sentence-transformers>=5.4.1",
    "typer>=0.25.1",
]

[project.scripts]
book = "books.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/books"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.12",
]
